Bug: Content exceeds the container which breaks the layout on mobile devices. #520.

--- a/source/css/_common/components/post/post.styl
+++ b/source/css/_common/components/post/post.styl
@@ -1,3 +1,9 @@
+.post-body {
+  +mobile() {
+    word-break: break-all;
+  }
+}
+
 .post-body .fancybox img {
   display: block !important;
   margin: 0 auto;
